--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -170,8 +170,8 @@ body {
   
   .auth-image {
     float: left;
-    width: 200px;
-    height: auto;
+    max-width: 50px;
+    /*height: auto; */
     margin-top: 10px;
     margin-right: 25px;
   }
