--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,6 +65,7 @@ body {
   
   #logo {
     float: left;
+    margin-left: 17px;
     width: 250px;
     height: 90px;
     font-family: Georgia, Times, "Times New Roman", serif;
@@ -171,9 +172,12 @@ body {
   .auth-image {
     float: left;
     max-width: 50px;
-    /*height: auto; */
     margin-top: 10px;
     margin-right: 25px;
+  }
+
+  .Mainimage {
+    max-width: 700px;
   }
   
   /* contact page */
