--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,10 +2,15 @@ body {
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     font-size: 18px;
     line-height: 34px;
-    color: #777777;
+    color: #b1a296;
     background: url("../images/concrete_seamless.png");
   }
   
+  /* This didn't work, not sure why */
+  .wordBoxes { 
+    text-decoration-color: white;
+  }
+
   * {
     box-sizing: border-box;
   }
@@ -35,7 +40,7 @@ body {
   h3 {
     font-family: Georgia, Times, "Times New Roman", serif;
     font-weight: 700;
-    color: #4aaaa5;
+    color: #b1a296;
   }
   
   h1 {
@@ -58,8 +63,8 @@ body {
     width: 100%;
     margin: 0 0 30px;
     overflow: auto;
-    color: #ffffff;
-    background: #ffffff;
+    color: purple;
+    background: #16253f;
     border-bottom: 2px solid #cccccc;
   }
   
@@ -72,11 +77,15 @@ body {
     font-size: 30px;
     font-weight: 700;
     line-height: 90px;
-    color: #ffffff;
+    color: #b1a296;
     text-align: center;
     text-decoration: none;
-    background: #4aaaa5;
+    background: #16253f;
   }
+
+  navbar-light .navbar-nav .nav-link {
+    color: #b1a296!important;
+}
   
   nav {
     float: right;
@@ -88,9 +97,9 @@ body {
     padding-left: 15px;
     margin-left: 15px;
     line-height: 18px;
-    color: #999;
+    color: #b1a296;
     text-decoration: none;
-    border-left: 1px solid #efefef;
+    border-left: 1px solid #16253f;
   }
   
   nav a:first-child {
@@ -99,6 +108,7 @@ body {
 
   .Navlinks {
     left: 33px;
+    color: #b1a296
   }
   
   /* footer */
@@ -107,19 +117,18 @@ body {
     padding: 30px 0;
     clear: both;
     font-size: 12px;
-    color: #ffffff;
-    color: #cccccc;
+    color: #b1a296;
     text-align: center;
-    background: #666666;
-    border-top: 8px solid #4aaaa5;
+    background: #16253f;
+    border-top: 8px solid #557a95;
     height: 50px;
   }
   
-  h3, h2 {
+  h3 {
     padding-bottom: 20px;
     margin-bottom: 15px;
     line-height: 22px;
-    border-bottom: 2px solid #eeeeee;
+    border-bottom: 2px;
   }
   
   /* main */
@@ -135,7 +144,7 @@ body {
     max-width: 960px;
     padding: 30px;
     margin: 0 0 40px;
-    background: #ffffff;
+    background: #16253f;
     border: 1px solid #dddddd;
   }
   
@@ -167,9 +176,9 @@ body {
     margin-bottom: 0;
     font-weight: 300;
     line-height: 30px;
-    color: #ffffff;
+    color: #b1a296;
     text-align: center;
-    background: #4aaaa5;
+    background: #7395ae;
     border-bottom: 0;
   }
   
@@ -225,11 +234,13 @@ body {
   }
 
   #navbarNav {
-    background-color: #ffffff;
+    background-color: #7395ae;
+    color: #b1a296
   }
 
   .bg-light {
-    background-color: #ffffff!important;
+    background-color: #16253f!important;
+    color: #b1a296
 }
 
   
