--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     font-size: 18px;
     line-height: 34px;
     color: #b1a296;
@@ -10,7 +10,7 @@ body {
   .wordBoxes { 
     text-decoration-color: white;
   }
-
+  
   * {
     box-sizing: border-box;
   }
@@ -61,11 +61,22 @@ body {
     position: fixed;
     z-index: 99;
     width: 100%;
-    margin: 0 0 30px;
+    margin: 0 0 0 15px;
     overflow: auto;
     color: purple;
     background: #16253f;
     border-bottom: 2px solid #cccccc;
+  }
+
+  footer {
+    padding: 30px 0;
+    clear: both;
+    font-size: 12px;
+    color: #b1a296;
+    text-align: center;
+    background: #16253f;
+    border-top: 8px solid #557a95;
+    height: 50px;
   }
   
   #logo {
@@ -82,10 +93,14 @@ body {
     text-decoration: none;
     background: #16253f;
   }
-
+  
   navbar-light .navbar-nav .nav-link {
     color: #b1a296!important;
-}
+  }
+  
+  #emailHelp {
+    color: #b1a296;
+  }
   
   nav {
     float: right;
@@ -113,16 +128,6 @@ body {
   
   /* footer */
   
-  footer {
-    padding: 30px 0;
-    clear: both;
-    font-size: 12px;
-    color: #b1a296;
-    text-align: center;
-    background: #16253f;
-    border-top: 8px solid #557a95;
-    height: 50px;
-  }
   
   h3 {
     padding-bottom: 20px;
@@ -178,7 +183,7 @@ body {
     line-height: 30px;
     color: #b1a296;
     text-align: center;
-    background: #7395ae;
+    background: #5d5c61;
     border-bottom: 0;
   }
   
@@ -234,12 +239,12 @@ body {
   }
 
   #navbarNav {
-    background-color: #7395ae;
+    background-color: #5d5c61;
     color: #b1a296
   }
 
   .bg-light {
-    background-color: #16253f!important;
+    background-color: #5d5c61!important;
     color: #b1a296
 }
 
