--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,7 +106,9 @@ body {
     float: right;
     margin-top: 25px;
   }
-  
+  a {
+    color: cornsilk;
+  }
   nav a {
     display: inline-block;
     padding-left: 15px;
