--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@ body {
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     font-size: 18px;
     line-height: 34px;
-    color: #b1a296;
+    color: cornsilk;
     background: url("../images/concrete_seamless.png");
   }
   
@@ -40,7 +40,7 @@ body {
   h3 {
     font-family: Georgia, Times, "Times New Roman", serif;
     font-weight: 700;
-    color: #b1a296;
+    color: cornsilk;
   }
   
   h1 {
@@ -72,7 +72,7 @@ body {
     padding: 30px 0;
     clear: both;
     font-size: 12px;
-    color: #b1a296;
+    color: cornsilk;
     text-align: center;
     background: #16253f;
     border-top: 8px solid #557a95;
@@ -88,20 +88,24 @@ body {
     font-size: 30px;
     font-weight: 700;
     line-height: 90px;
-    color: #b1a296;
+    color: cornsilk;
     text-align: center;
     text-decoration: none;
     background: #16253f;
   }
   
   navbar-light .navbar-nav .nav-link {
-    color: #b1a296!important;
+    color: cornsilk!important;
+
   }
   
   #emailHelp {
-    color: #b1a296;
+    color: cornsilk;
   }
-  
+  a.nav-link {
+    color: cornsilk;
+  }
+
   nav {
     float: right;
     margin-top: 25px;
@@ -114,7 +118,7 @@ body {
     padding-left: 15px;
     margin-left: 15px;
     line-height: 18px;
-    color: #b1a296;
+    color: cornsilk;
     text-decoration: none;
     border-left: 1px solid #16253f;
   }
@@ -125,7 +129,7 @@ body {
 
   .Navlinks {
     left: 33px;
-    color: #b1a296
+    color: cornsilk
   }
   
   /* footer */
@@ -183,7 +187,7 @@ body {
     margin-bottom: 0;
     font-weight: 300;
     line-height: 30px;
-    color: #b1a296;
+    color: cornsilk;
     text-align: center;
     background: #5d5c61;
     border-bottom: 0;
@@ -242,12 +246,12 @@ body {
 
   #navbarNav {
     background-color: #5d5c61;
-    color: #b1a296
+    color: cornsilk
   }
 
   .bg-light {
     background-color: #5d5c61!important;
-    color: #b1a296
+    color: cornsilk
 }
 
   
